# wifi-analyzer

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/: languages.yml
.github/workflows/: rust.yml
.rustup/: settings.toml
src/: deauth.rs  main.rs  packet.rs
